--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -1,26 +1,49 @@
+
+
 {% extends 'base.html' %}
 
-{% block title %}
-{{user.full_name}}
-{% endblock %}
+{% block title %} {{ user.full_name }} {% endblock %}}
 
-{% block content%}
+{% block content %}
 
-<div class ="row">
-    {% if user.image_url %}
-    <div>
-        <img src="{{user.image_url}}" alt="{{user.full_name}}"
-    </div>
-    {% endif %}
+<div class="row">
 
-    <div>
-        <h1> {{user.full_name}}</h1>
+  {% if user.image_url %}
+  <div class="col-sm-2 col-6">
+    <img src="{{ user.image_url }}"
+         alt="{{ user.full_name }}"
+         class="img-fluid">
+  </div>
+  {% endif %}
 
-        <form>
-            <button formaction="/users/{{user.id}}/edit" formmethod="GET">Edit</button>
-            <button formaction="/users/{{user.id}}/delete" formmethod="POST">Delete</button>
-        </form>
-    </div>
+  <div class="col-sm-10 col-12">
+    <h1>{{ user.full_name }}</h1>
+
+    <form>
+      <button class="btn btn-primary btn-sm"
+              formaction="/users/{{ user.id }}/edit"
+              formmethod="GET">Edit
+      </button>
+      <button class="btn btn-danger btn-sm"
+              formaction="/users/{{ user.id }}/delete"
+              formmethod="POST">Delete
+      </button>
+    </form>
+
+    <h2 class="mt-4">Posts</h2>
+
+    <ul>
+      {% for post in user.posts %}
+      <li>
+        <a href="/posts/{{ post.id}}">{{ post.title }}</a>
+        <small>{{ post.friendly_date }}</small>
+      </li>
+      {% endfor %}
+    </ul>
+
+    <p><a href="/users/{{ user.id }}/posts/new" class="btn btn-primary">Add Post</a></p>
+
+  </div>
 </div>
 
 {% endblock %}
