--- a/templates/posts/edit.html
+++ b/templates/posts/edit.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title% }
+{% block title %}
 Edit Post
 {% endblock %}
 
@@ -14,6 +14,22 @@ Edit Post
 
     <label for="content">Post Content</label>
     <textarea id="content" name="content"> {{ post.content }} </textarea>
+
+    <div class="form-check">
+        {% for tag in tags %}
+        <div>
+          <input class="form-check-input"
+                 type="checkbox"
+                 value="{{ tag.id }}"
+                 id="tag_{{ tag.id }}"
+                 {% if tag in post.tags %}checked{% endif %}
+                 name="tags">
+          <label class="form-check-label" for="tag_{{ tag.id }}">
+            {{ tag.name }}
+          </label>
+        </div>
+        {% endfor %}
+    </div>
 
     <a href="/users/{{ post.user_id }}">Cancel</a>
     <button type="submit">Edit</button>
