--- a/templates/posts/show.html
+++ b/templates/posts/show.html
@@ -8,8 +8,17 @@
 
   <p>{{ post.content }}</p>
   <p><i>By {{ post.user.full_name }}
-    on {{ post.friendly_date }}
+    on {{ post.create_at }}
   </i></p>
+
+  {% if post.tags %}
+<p>
+  <b>Tags:</b>
+  {% for tag in post.tags %}
+  <a href="/tags/{{ tag.id }}">{{ tag.name }}</a>
+  {% endfor %}
+</p>
+{% endif %}
 
 <form>
   <button class="btn btn-outline-primary"
